modules/k3s/azure/v1/master/main.tf
resource "azurerm_linux_virtual_machine" "this" {

  admin_username      = ""
  location            = ""
  name                = ""
  network_interface_ids = []
  resource_group_name = ""
  size                = ""
}
